--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -38,7 +38,7 @@ jobs:
         run: |
           cd deploy && npm run cdk deploy -- --all --require-approval never
 
-      - name: Build and zip Next.js app
+      - name: Build, zip and upload Next.js app
         run: |
           INSTANCE_ID=$(aws ssm get-parameter --name "/webapp/webapp-ec2-instance-id" --query "Parameter.Value" --output text)
           echo "Retrieved instance ID: $INSTANCE_ID"
@@ -46,27 +46,28 @@ jobs:
           cd src/webapp
           npm ci
           npm run build
-          zip -r ../../../webapp.zip .next package.json package-lock.json next.config.js public
 
-      - name: Upload zip and script to S3
-        run: |
-          cd ../../../
+          zip -r webapp.zip .next package.json package-lock.json next.config.js public
+
           BUCKET_NAME="temp-webapp-deployment-$(echo $INSTANCE_ID | tr -d '-')"
           aws s3 mb s3://$BUCKET_NAME --region ${{ vars.AWS_DEFAULT_REGION }} || true
           aws s3 cp webapp.zip s3://$BUCKET_NAME/webapp.zip
-          aws s3 cp scripts/install-webapp.sh s3://$BUCKET_NAME/install-webapp.sh
+          aws s3 cp ../../scripts/install-webapp.sh s3://$BUCKET_NAME/install-webapp.sh
+
+          echo "INSTANCE_ID=$INSTANCE_ID" >> $GITHUB_ENV
+          echo "BUCKET_NAME=$BUCKET_NAME" >> $GITHUB_ENV
 
       - name: Deploy app on EC2 via SSM
         run: |
           aws ssm send-command \
-            --instance-ids "$INSTANCE_ID" \
+            --instance-ids "${{ env.INSTANCE_ID }}" \
             --document-name "AWS-RunShellScript" \
             --comment "Deploy Next.js SSR app using PM2" \
-            --parameters commands="[
-              \"aws s3 cp s3://$BUCKET_NAME/webapp.zip /tmp/webapp.zip\",
+            --parameters commands="[ 
+              \"aws s3 cp s3://${{ env.BUCKET_NAME }}/webapp.zip /tmp/webapp.zip\",
               \"cd /tmp && unzip -o webapp.zip -d webapp\",
               \"rm -rf /home/ec2-user/webapp && mv /tmp/webapp /home/ec2-user/webapp\",
-              \"aws s3 cp s3://$BUCKET_NAME/install-webapp.sh /home/ec2-user/install-webapp.sh\",
+              \"aws s3 cp s3://${{ env.BUCKET_NAME }}/install-webapp.sh /home/ec2-user/install-webapp.sh\",
               \"chown ec2-user:ec2-user /home/ec2-user/install-webapp.sh\",
               \"chmod +x /home/ec2-user/install-webapp.sh\",
               \"sudo -u ec2-user bash /home/ec2-user/install-webapp.sh\"
