Ip address from env secret

--- a/.github/workflows/01.deploy-vpc.yaml
+++ b/.github/workflows/01.deploy-vpc.yaml
@@ -12,6 +12,7 @@ jobs:
     env:
       CDK_DEFAULT_REGION: ${{ vars.AWS_DEFAULT_REGION }}
       CDK_DEFAULT_ACCOUNT: ${{ vars.CDK_DEFAULT_ACCOUNT }}
+      MY_IP_ADDRESS: ${{ secrets.MY_IP_ADDRESS }}
     permissions:
       contents: read
       id-token: write
